# rxy

./: .gitignore  Cargo.toml  README.md
src/: app.rs  categories.rs  config.rs  feed.rs  main.rs  paper_faves.rs  read_state.rs  topic_filter.rs  ui.rs
